# SimplyTypedLambdaCalculus

./: .gitignore  stlc.cabal
src/: Main.hs
src/Lang/: Ast.hs  Eval.hs  Pretty.hs  TypeCheck.jt
src/Parser/: Lexer.x  Parser.y
